# emprendimiento-innovacion-2026

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  _quarto.yml  index.qmd  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: architecture_lint.yml  ci.yml
bibliography/: PENDIENTES.md  bibliography_index.json  rag_status.json
bibliography/borradores/: lean-canvas-modelo-de-negocio-para-consultoria-economica-pymes-loja-ecuador.md  validacion-del-modelo-de-negocio-agencia-de-marketing-digital-en-loja-ecuador.md
bibliography/raw/: references_root_backup.bib
config/: intelligence_map.json  resources.json  settings.toml
docs/: README.md
docs/evidence/: README.md
docs/evidence/Business-Project-CEL/: 01-lean-canvas.qmd  README.md  cel_references.bib  guia_socios.md
docs/evidence/u1-aa-01-sistemas-innovacion/: index.qmd
docs/evidence/u1-ape-01-business-project-cel/: index.qmd
docs/evidence/u1-ape-02-marketing-agency/: 01-lean-canvas.html
docs/management/: ARCHITECTURE.md  ROADMAP.md  index.qmd  root_index_backup.qmd
docs/management/planning/: index.qmd
docs/management/status/: RAG_REINDEXING_TICKET.md
docs/readings/: index.qmd
docs/syllabus/oficial/: index.qmd
docs/vaults/u1-ape-01-business-project-cel/: 01-lean-canvas.qmd  README.md
docs/vaults/u1-ape-02-marketing-agency/: 01-lean-canvas.qmd  index.qmd
docs/writing/: index.qmd
src/core/: brain.py  config.py
src/tasks/: sync_bibliographic_intelligence.py
tests/: conftest.py  test_main.py  test_vault_architecture.py
tests/system/: test_architecture.py
(+9 files in other folders)
