[project]
name = "emprendimiento-innovacion"
version = "0.1.0"
description = "Node: Innovacion y Emprendimiento - Quantitative analysis of innovation metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "linearmodels>=7.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.14.0",
    "stargazer>=0.0.7",
    "capital-workstation-libs",
]

[tool.uv]
package = false

[tool.uv.sources]
capital-workstation-libs = { path = "/home/erick-fcs/Capital_Workstation/capital-workstation-libs", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.8.0",
    "mypy>=1.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
